<resources>
    <string name="app_name">Conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_create_article">Create Article</string>
    <string name="menu_auth">Login / Signup</string>
    <string name="arg_article_id">ARTICLE_ID</string>
    <string name="menu_logout">Logout</string>
</resources>